Fix spacing issue below buttons

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -16,7 +16,7 @@ body {
 
 #pc {
   background: url("/images/pc.png") no-repeat center bottom;
-  height: 1620px;
+  height: 1660px;
   margin: 0 auto;
   padding: 0 150px;
   padding-top: 1px;
